test/parser/unknown-token.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:1: error: unknown token '`'
`
// CHECK: [[@LINE+1]]:1: error: expected identifier, got end-of-file
